rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__add.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (add), \"a + 1;\")"
---
[
    ExprStmt(
        Binary(
            Binary {
                lhs: Atom(
                    Ident(
                        Ident(
                            "a",
                        ),
                    ),
                ),
                op: Plus,
                rhs: Atom(
                    Literal(
                        Number(
                            1,
                        ),
                    ),
                ),
            },
        ),
    ),
]
