rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__add_1.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_ok :: < Expr >\n(stringify! (add_1), \"5 + 3\")"
---
Binary(
    Binary {
        lhs: Literal(
            Number(
                5,
            ),
        ),
        op: Plus,
        rhs: Literal(
            Number(
                3,
            ),
        ),
    },
)
