rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__add_mul.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_ok :: < Expr >\n(stringify! (add_mul), \"5 + 3 * 4\")"
---
Binary(
    Binary {
        lhs: Literal(
            Number(
                5,
            ),
        ),
        op: Plus,
        rhs: Binary(
            Binary {
                lhs: Literal(
                    Number(
                        3,
                    ),
                ),
                op: Star,
                rhs: Literal(
                    Number(
                        4,
                    ),
                ),
            },
        ),
    },
)
