rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__anon_function_call.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (anon_function_call), \"a(1, 2, 3);\")"
---
[
    Stmt(
        ExprStmt(
            Atom(
                FnCall(
                    FnCall {
                        fn_name: Ident(
                            "a",
                        ),
                        args: CommaSeparated {
                            items: [
                                Anonymous(
                                    AnonymousFnArg {
                                        expr: Atom(
                                            Literal(
                                                Number(
                                                    1,
                                                ),
                                            ),
                                        ),
                                    },
                                ),
                                Anonymous(
                                    AnonymousFnArg {
                                        expr: Atom(
                                            Literal(
                                                Number(
                                                    2,
                                                ),
                                            ),
                                        ),
                                    },
                                ),
                                Anonymous(
                                    AnonymousFnArg {
                                        expr: Atom(
                                            Literal(
                                                Number(
                                                    3,
                                                ),
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ),
        ),
    ),
]
