rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__array.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (array), \"a[1];\")"
---
[
    Stmt(
        ExprStmt(
            PlaceExpr(
                ArrayAccess(
                    ArrayAccess {
                        index_expr: Literal(
                            Number(
                                1,
                            ),
                        ),
                        ident: Ident(
                            "a",
                        ),
                    },
                ),
            ),
        ),
    ),
]
