rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__array_access_precedence.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_ok :: < Expr >\n(stringify! (array_access_precedence), \"a[1]++\")"
snapshot_kind: text
---
Unary(
    Unary {
        op: Postfix(
            PlusPlus,
        ),
        rhs: Atom(
            ArrayAccess(
                ArrayAccess {
                    index_expr: Atom(
                        Literal(
                            Number(
                                1,
                            ),
                        ),
                    ),
                    lhs_expr: Atom(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                },
            ),
        ),
    },
)
