rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__array_assignment.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_ok :: < Statement >\n(stringify! (array_assignment), \"a[1] = 3;\")"
---
a[1] = 3;
