rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__array_assignment_multi.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_ok :: < Statement >\n(stringify! (array_assignment_multi), \"a[1][2][3] = 3;\")"
---
a[1][2][3] = 3;
