rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__array_literal.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (array_literal), \"a = [1, 2, 3];\")"
---
[
    Assignment(
        Assignment {
            lhs: PlaceExpr {
                ident: Ident(
                    "a",
                ),
                array_accesses: [],
            },
            operator: Equal,
            rhs: Atom(
                Array(
                    Array {
                        items: CommaSeparated {
                            items: [
                                Atom(
                                    Literal(
                                        Number(
                                            1,
                                        ),
                                    ),
                                ),
                                Atom(
                                    Literal(
                                        Number(
                                            2,
                                        ),
                                    ),
                                ),
                                Atom(
                                    Literal(
                                        Number(
                                            3,
                                        ),
                                    ),
                                ),
                            ],
                            delimiter: Bracket,
                        },
                    },
                ),
            ),
        },
    ),
]
