rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__arrays.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (arrays), \"a[0];\")"
---
[
    Stmt(
        ExprStmt(
            PlaceExpr(
                ArrayAccess(
                    ArrayAccess {
                        index_expr: Literal(
                            Number(
                                0,
                            ),
                        ),
                        ident: Ident(
                            "a",
                        ),
                    },
                ),
            ),
        ),
    ),
]
