rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__assign.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (assign), \"a = 1;\")"
---
[
    ExprStmt(
        Assignment(
            Assignment {
                lhs: PlaceExpr {
                    ident: Ident(
                        "a",
                    ),
                    array_accesses: [],
                },
                op: Equal,
                rhs: Atom(
                    Literal(
                        Number(
                            1,
                        ),
                    ),
                ),
            },
        ),
    ),
]
